<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/user_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hello, user!"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:padding="12dp"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/extra_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Where do you want to go?"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:padding="12dp"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent" />

        <fragment
            android:id="@+id/map_fragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="328dp"
            map:layout_constraintTop_toBottomOf="@+id/user_details"
            tools:context=".DashboardActivity" />

        <EditText
            android:id="@+id/tour_name_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="20sp"
            android:padding="12dp"
            android:hint="@string/tour_name"/>

        <EditText
            android:id="@+id/tour_description_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="20sp"
            android:padding="12dp"
            android:hint="@string/tour_description"/>


        <Button
            android:id="@+id/add_recording_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/purpleDark"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/add_recording_video"
            map:layout_constraintTop_toBottomOf="@+id/map" />

        <Button
            android:id="@+id/save_tour_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/purpleDark"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/save_tour"
            map:layout_constraintTop_toBottomOf="@+id/map" />

        <Button
            android:id="@+id/view_tours_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/purpleDark"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/view_tours"
            map:layout_constraintTop_toBottomOf="@+id/map" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>





